[package]
name = "tbslib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
regex = "1.11.1"

[[bin]]
name = "server"
path = "src_server/main.rs"

[dependencies.ble-peripheral-rust]
version = "0.1"
[dependencies.uuid]
version = "1.11.0"