[package]
name = "laad"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
regex = "1.11.1"
futures = "0.3.31"

[dev-dependencies]
btleplug = "0.11.7" 
rand = { version = "0.8", features = [ "small_rng" ] }
clap = "4.5.23"
ble-peripheral-rust = "0.1"
uuid = "1.11.0"
tracing-subscriber = "0.3.19"


[[example]]
name = "laadreader"
path = "examples/laadreader/main.rs"